--- a/css/style.css
+++ b/css/style.css
@@ -777,6 +777,7 @@ banner  结束
 /* ==============================================
 3.5 我们的客户 开始
 ================================================= */
+
 .customer{
 	padding-bottom: 0.4rem;
 	padding-left: 1.5rem;
@@ -1780,12 +1781,7 @@ footer 结束
 	z-index: 100;
 }
 .culture-bgbox>div .culture-p.culture-p-1{
-	z-index: 200;
 	display: none;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
 }
 .culture-bgbox>div:hover .culture-p.culture-p-1{
 	display: block;
@@ -3996,5 +3992,213 @@ button.title-info-btn:focus {
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
+	/* ============  税务介绍 ↓ ============ */
+.customer-ys{
+	padding: 2.01rem 1.5rem 0.4rem;
+	box-sizing: border-box;
+	position: relative;
+	background-size: cover;
+}
+.ys-box{
+	display: flex;
+	margin: 0 -0.13rem;
+
+}
+.ys-item-box{
+	width: 3.04rem;
+	height: 3.22rem;
+	margin: 0 0.13rem;
+	position: relative;
+}
+.ys-item-img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+}
+.ys-item-img.active{
+	display: none;
+}
+.ys-item1-icon{
+	width: 1.66rem;
+	height: 1.66rem;
+	position: absolute;
+	top: 0.18rem;
+	left: 50%;
+	margin-left: -0.83rem;
+	z-index: 3;
+}
+.ys-item-box:hover .ys-item-img{
+	display: none;
+}
+.ys-item-box:hover .ys-item-img.active{
+	display: block;
+}
+.ys-item-box:hover .ys-item1-icon{
+	transform: scale(1.2);
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.fwfx-box{
+	width: 100%;
+	padding-right: 1.70rem;
+	display: flex;
+	padding-top: 0.56rem;
+}
+.tax-gj-bg{
+	width: 9.8rem;
+	height: 3.82rem;
+}
+.fwfx-text-box{
+	flex: 1;
+	padding-left: 0.86rem;
+}
+.fwfx-box .layer-1 {
+	width: 1rem;
+	height: 1px;
+	background-color: rgba(189, 138, 76, 1);
+}
+.fwfx-box .word-1{
+	color: rgba(51, 51, 51, 1);
+	font-size: 0.36rem;
+	font-family: PingFangSC-Semibold;
+	white-space: nowrap;
+	line-height: 0.5rem;
+	text-align: left;
+	margin: 0.3rem 0;
+}
+.fwfx-word-2{
+	font-size: 0.18rem;
+	font-family: PingFangSC-Regular, PingFang SC;
+	font-weight: 400;
+	color: #333333;
+}
+.workflow-customer{
+	padding-bottom: 0.4rem;
+	box-sizing: border-box;
+}
+.workflow-box{
+	width: 100%;
+	margin: 0 auto;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	margin-top: 0.6rem;
+}
+.workflow-box>div{
+	width: 2.7rem;
+	position: relative;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+}
+.workflow-box>div div.workflow-imgbox{
+	width: 2.7rem;
+	height: 2.28rem;
+	position: relative;
+}
+.workflow-box>div div.workflow-imgbox .culture-p{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	z-index: 100;
+}
+.workflow-box>div img.cultureBg-img{
+	width: 2.7rem;
+	height: 5.98rem;
+}
+
+
+
+
+.workflow-box>div div.workflow-imgbox .culture-p.culture-p-1{
+	z-index: 200;
+	display: none;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.workflow-box>div:hover .culture-p{
+	display: none;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.workflow-box>div:hover .culture-p.culture-p-1{
+	display: block;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.customer-fd{
+	padding: 2.08rem 0 0.58rem;
+	box-sizing: border-box;
+	position: relative;
+	background-size: cover;
+}
+.fd-box{
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.fd-box>div.fd-item-box{
+	width: 7.96rem;
+	height: 3.52rem;
+	border-radius: 8px;
+	background: #fff;
+	overflow: hidden;
+	margin: 0 0.15rem;
+	display: flex;
+	align-items: center;
+	padding: 0.16rem;
+}
+.fd-item-img{
+	width: 3.7rem;
+	height: 3.2rem;
+}
+.fd-item-img>img{
+	width: 100%;
+	height: 100%;
+	display: inline-block;
+}
+.fd-item-text{
+	height: 100%;
+	flex: 1;
+}
+.fd-item-xian{
+	width: 0.5rem;
+	height: 2px;
+	background: #BD8A4C;
+}
+.fd-item-t{
+	font-size: 0.24rem;
+	font-family: PingFangSC-Regular, PingFang SC;
+	font-weight: 400;
+	color: #333333;
+	margin-top: 0.3rem;
+}
+.fd-item-d{
+	font-size: 0.18rem;
+	font-family: PingFangSC-Regular, PingFang SC;
+	font-weight: 400;
+	color: #333333;
+	line-height: 25px;
+	margin-top: 0.1rem;
+}
+.business-customer{
+	padding-bottom: 0.4rem;
+	box-sizing: border-box;
+}
+
+	/* ===========  税务介绍 ↑ ============ */
 
 /* ======================  会所介绍页 介绍 ↑ ======================== */
